--- a/templates/createEditForm.html
+++ b/templates/createEditForm.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html> 
+﻿<!DOCTYPE html> 
 <html> 
 
 <body> 
 
-<div id="registration">
+<div id="createEdit">
  <h2>Création / Edition</h2>
 
- <form id="RegisterUserForm" action="" method="post">
+ <form id="CreateEditPersonForm" action="" method="post">
  <fieldset>
  <p>
  <label for="name">Nom Complet</label>
@@ -19,8 +19,9 @@
  </p>
 
  <p>
- <label for="email">Sexe</label>
- <input id="email" name="email" type="email" class="text" value="" />
+ <label for="sex">Sexe</label>
+ <input id="sex" type="radio" name="Sexe" value="male" />  Mâle
+ <input id="sex" type="radio" name="Sexe" value="female" /> Femelle
  </p>
 
  <p>
