--- a/css/base.css
+++ b/css/base.css
@@ -12,5 +12,5 @@ html, body{
 	display: none;
 }
 
-form p { position:relative }
-form p label { position: absolute; top: 0; left: 0;}
+p { position:relative }
+p label { position: absolute; top: 0; left: 0;}
